--- a/templates/frontend.html
+++ b/templates/frontend.html
@@ -19,7 +19,7 @@
 
 
 
-    <img src="{{ input_image }}" alt="Italian Trulli">
+    <img src="{{ input_image }}" alt="Imagem de entrada">
   </form>
 </body>
 </html>
