Basicão, mas tá bom por enquanto

--- a/templates/frontend.html
+++ b/templates/frontend.html
@@ -19,7 +19,7 @@
 
 
 
-    <img src="{{ input_image }}" alt="Imagem de entrada">
+    <img src="{{ input_image }}" alt="Imagem de entradapy">
   </form>
 </body>
 </html>
