--- a/templates/frontend.html
+++ b/templates/frontend.html
@@ -1,25 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Simple File Processor</title>
+  <title>Processador Aritmético</title>
 </head>
 <body>
   <form action="/upload" method="post" enctype="multipart/form-data">
-    <label for="file">Choose file:</label>
+    <label for="file">Escolha o arquivo:</label>
     <input type="file" id="fileid" name="input_file"><br><br>
 
-    <label>Select option:</label><br>
-    <input type="radio" id="option1" name="option" value="1">
-    <label for="option1">Option 1</label><br>
-    <input type="radio" id="option2" name="option" value="2">
-    <label for="option2">Option 2</label><br><br>
+    <input type="submit" value="Processar">
 
-    <input type="submit" value="Upload and Process">
-
-
-
-
-    <img src="{{ input_image }}" alt="Imagem de entradapy">
   </form>
 </body>
 </html>
