--- a/templates/frontend.html
+++ b/templates/frontend.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Processador Aritmético</title>
+  <title>MUPA - Mais Um Processador Aritmético</title>
 </head>
 <body>
   <form action="/upload" method="post" enctype="multipart/form-data">
